--- a/.github/workflows/try.yml
+++ b/.github/workflows/try.yml
@@ -6,5 +6,8 @@ jobs:
     steps:
       - name: Print to console
         run: echo Hello GH Actions!
-      
+      - name: Print few lines
+        run: |
+          echo first line
+          acho second line
     
